# ExcavatorRuntime

./: .gitignore  README.md  orin需求.md  tf.rviz
airy_excavator_bringup/: CMakeLists.txt  package.xml
airy_excavator_bringup/launch/: operator.launch.py
airy_excavator_bringup/test/: test_operator_launch.py  test_operator_profiles.py
airy_mission_panel/: CMakeLists.txt  package.xml  plugins_description.xml
airy_mission_panel/include/airy_mission_panel/: excavation_panel.hpp  panel_state.hpp
airy_mission_panel/src/: excavation_panel.cpp  excavation_panel_ros.cpp  panel_state.cpp
airy_mission_panel/test/: test_panel_state.cpp  test_plugin_discovery.cpp
kinematics/excavator_kinematics/: README.md  package.xml  setup.cfg  setup.py
kinematics/excavator_kinematics/config/: excavator_geometry.yaml
kinematics/excavator_kinematics/excavator_kinematics/: excavator_tf_node.py  joint_slider_publisher.py
kinematics/excavator_kinematics/launch/: excavator_tf.launch.py
kinematics/excavator_kinematics/tests/: test_joint_slider_publisher.py  test_unity_bucket_tip_conversion.py
kinematics/waji_description/: CMakeLists.txt  README.md  package.xml
kinematics/waji_description/config/: joint_names_waji.yaml  named_joint_poses.json
kinematics/waji_description/launch/: display.launch.py  rviz.launch.py  slider.launch.py
kinematics/waji_description/rviz/: waji.rviz
kinematics/waji_description/scripts/: bucket_tip_pose_publisher.py  waji_joint_slider.py
kinematics/waji_description/test/: test_calibrated_urdf_contract.py  test_joint_slider_contract.py
kinematics/waji_description/urdf/: waji.urdf
localmap/: CMakeLists.txt  README.md  package.xml
localmap/apps/data_tools/: export_first_cloud.py  export_live_cloud.py  generate_local_map_from_npz.py  inspect_bag_points.py  run_offline_localmap_pipeline.py  save_octomap_snapshot.sh
localmap/apps/diagnostics/: __init__.py  evaluate_bucket_tip_calibration.py  run_smoke_check.py
localmap/apps/perception/: export_octomap_markers_to_local_map.py  inspect_extrinsics.py  inspect_live_cloud_geometry.py  perception_profile_to_shell.py  process_lifecycle.sh  reset_octomap_periodically.sh  run_live_local_map_node.py  run_octomap_mapping.sh  (+2 more)
localmap/config/: bucket_tip.machine_root.measured.json  bucket_tip.machine_root_ros.json  bucket_tip_tf_bridge.machine_root.json  bucket_tip_tf_bridge.machine_root_ros.identity.v1.json  extrinsics_rslidar_to_machine_root.measured.json  extrinsics_rslidar_to_machine_root_ros.derived.v1.json  extrinsics_rslidar_to_machine_root_ros.derived.v2.json  perception.json  perception.json.md  planning.json  reachable_workspace.machine_root_ros.derived.v1.json  targets.machine_root_ros.derived.v1.json  targets.mock.json
localmap/docs/: octomap_integration_plan.md
localmap/examples/: mock_local_map.json
localmap/launch/: fixture_planning.launch.py
localmap/localmap_core/: __init__.py  bucket_tip_bridge.py  bucket_tip_calibration.py  fixture_planning.py  generator.py  geometry.py  io.py  live_execution_planning.py  octomap_obstacle_adapter.py  perception_profile.py  planning_inputs.py  planning_intent.py  planning_profile.py  reachable_workspace.py  replay_clock.py  simple_bucket_tip_planner.py  trajectory.py
localmap/schemas/: local_map.schema.json  observation_waypoint_slice.schema.json  rrt_star_request.schema.json  trajectory_command.schema.json
localmap/scripts/: _compat.py  bridge_bucket_tip_from_tf.py  export_first_cloud.py  export_live_cloud.py  export_octomap_markers_to_local_map.py  generate_local_map_from_npz.py  generate_mock_trajectory_from_rrt_request.py  generate_observation_waypoint_slice.py  generate_rrt_request_from_local_map.py  generate_simple_rrt_trajectory_from_request.py  inspect_bag_points.py  inspect_extrinsics.py  inspect_live_cloud_geometry.py  publish_reachable_workspace_markers.py  publish_trajectory_markers.py  reset_octomap_periodically.sh  run_live_local_map_node.py  run_octomap_mapping.sh  run_offline_localmap_pipeline.py  run_perception_stack.sh  run_planning_once.sh  run_smoke_check.sh  save_octomap_snapshot.sh  transform_live_cloud_to_base.py
localmap/tests/: test_bucket_tip_bridge.py  test_bucket_tip_calibration.py  test_fixture_plan_action_integration.py  test_fixture_planning.py  test_fixture_ros_entrypoint.py  test_live_execution_planning.py  test_live_plan_follow_snapshot_contract.py  test_localmap_pipeline.py  test_octomap_obstacle_adapter.py  test_offline_pipeline_script.py  test_perception_profile.py  test_planner_obstacle_mask.py  test_planning_inputs.py  test_planning_intent.py  test_planning_profile.py  test_planning_runner.py  test_reachable_workspace.py  test_replay_clock.py  test_ros_frame_migration.py  test_simple_bucket_tip_planner.py  test_smoke_check.py  test_trajectory_contracts.py
mission/: CMakeLists.txt  README.md  __init__.py  contract.py  follow.py  home.py  markers.py  package.xml  replay.py  shadow_observation.py  state_machine.py  trajectory_tracker.py
mission/apps/: __init__.py  publish_mission_markers.py  run_mission_replay.py  run_trajectory_shadow.py
mission/config/: excavation_cycle.json
mission/launch/: machine_behaviors_shadow.launch.py
mission/replays/: mission.placeholder.json  nominal.placeholder.json
mission/runtime_ros/: __init__.py  excavation_cycle_action_server.py  follow_action_server.py  no_motion_backend.py  run_plan_follow_shadow.py  send_hold_follow_goal.py  send_plan_goal.py  send_return_home_goal.py
mission/schemas/: excavation_mission.schema.json
mission/tests/: test_excavation_cycle_action_integration.py  test_follow_action_integration.py  test_follow_session.py  test_live_shadow_cli.py  test_markers.py  test_mission_contract.py  test_mission_snapshot_publisher.py  test_named_joint_poses.py  test_plan_follow_action_integration.py  test_replay.py  test_replay_cli.py  test_return_home_action_integration.py  test_ros_entrypoints.py  test_shadow_observation.py  test_state_machine.py  test_trajectory_tracker.py
ros_interfaces/airy_excavator_interfaces/: CMakeLists.txt  package.xml
rviz/: tf.rviz  (+1 more)
(+77 files in other folders)
