<?xml version="1.0"?>
<package format="3">
  <name>airy_excavator_bringup</name>
  <version>0.1.0</version>
  <description>System-level launch files for Airy excavator operator workflows.</description>
  <maintainer email="user@example.com">zhaoshuai</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>airy_localmap</exec_depend>
  <exec_depend>airy_mission_panel</exec_depend>
  <exec_depend>airy_mission_runtime</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>waji_description</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
