<?xml version="1.0"?>
<package format="3">
  <name>airy_mission_panel</name>
  <version>0.1.0</version>
  <description>RViz operator panel for Airy excavator Mission Actions.</description>
  <maintainer email="user@example.com">zhaoshuai</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>airy_excavator_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rviz_common</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>libqt5-widgets5</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins_description.xml"/>
  </export>
</package>
